implementando @using.extensions en viewimport

--- a/MvcCoreSession/Views/EjemploSession/Index.cshtml
+++ b/MvcCoreSession/Views/EjemploSession/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Mascota
+@* ESTAS EXTENSIONES SE METERÍAN DENTRO DE VIEW IMPORTS PARA QUE TODAS LAS VISTAS LO TUVIERAN
 @using MvcCoreSession.Helpers
-@using MvcCoreSession.Extensions
+@using MvcCoreSession.Extensions *@
 <h1>EJEMPLOS Session</h1>
 
 <h2 style="color:blue">
