--- a/MvcCoreSession/Views/EjemploSession/Index.cshtml
+++ b/MvcCoreSession/Views/EjemploSession/Index.cshtml
@@ -32,6 +32,9 @@
     <li class="list-group-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="EjemploSession" asp-action="SessionMascotasColectionBytes">SESSION MASCOTAS COLECTION</a>
     </li>
+    <li class="list-group-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="EjemploSession" asp-action="SessionMascotasColectionGenerico">SESSION MASCOTAS COLECTION GENÉRICA</a>
+    </li>
 </ul>
 
 
