--- a/MvcCoreSession/Views/EjemploSession/Index.cshtml
+++ b/MvcCoreSession/Views/EjemploSession/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Mascota
+﻿@model List<Mascota>
 @* ESTAS EXTENSIONES SE METERÍAN DENTRO DE VIEW IMPORTS PARA QUE TODAS LAS VISTAS LO TUVIERAN
 @using MvcCoreSession.Helpers
 @using MvcCoreSession.Extensions *@
@@ -58,3 +58,40 @@ else
 {
     <h2>No se cargan los datos de mascota</h2>
 }
+@* VAMOS A REALIZAR LA vista de la coleccion de mascotas *@
+@if (Model != null)
+{
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>
+                    Nombre
+                </th>
+                <th>
+                    Raza
+                </th>
+                <th>
+                    Edad
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody >
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @item.Nombre
+                    </td>
+                    <td>
+                        @item.Raza
+                    </td>
+                    <td>
+                        @item.Edad
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+
